--- a/app/templates/budget.html
+++ b/app/templates/budget.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<div id="wrapper">
 <div class="options-container">
 <div id="heading">Hi,<br>
 start by selecting your budget:</div><br>
@@ -17,5 +18,6 @@ start by selecting your budget:</div><br>
     value.html(this.value+"€");
     });
   </script>
+</div>
 </div>
 {% endblock %}
