--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,13 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,400);
 
 html, body{
-    margin: 0;
+    overflow: hidden;
 }
 
 body{
-  overflow: hidden;
-  width: 100%;
-
 }
 
 #wrapper{
@@ -25,8 +22,13 @@ body{
 #nav{
   width: 100vw;
   /* margin-left: -50vw; */
-  padding-top: 35vh;
+  padding-top: 35vmin;
   text-align: center;
+}
+
+#nav button{
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
 
 .options-container{
@@ -34,7 +36,7 @@ body{
   display: block;
   width: 100%;
   height: 48vh;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: auto;
   /* padding-left: 50vw; */
   font-size: 4vmin;
@@ -45,7 +47,7 @@ body{
 .option{
   /* margin: 32px; */
   transition: margin-left 0.5s;
-  margin-left: 40vw;
+  margin-left: 80vw;
   display: none;
   /* margin-bottom: -10%; */
   height: 25vh;
@@ -61,15 +63,11 @@ body{
 }
 
 .option.left{
-  margin-left: 0vw;
+  margin-left: -40vw;
 }
 
 .option:nth-child(1){
   display: none !important;
-}
-
-.next-btn{
-  /* margin-top: 10%; */
 }
 
 .budget-slider-value{
@@ -90,7 +88,7 @@ body{
 
 .option-slider{
   width: 80%;
-  margin: 0 auto 4vmax auto;
+  margin: 0 auto 1vmax auto;
   transition-duration: 0.25s;
 }
 
@@ -112,21 +110,21 @@ input[type=range]{
 }
 
 input[type=range]::-webkit-slider-runnable-track {
-  height: 3vh;
+  height: 20px;
   background: #1ABC9C;
   border: none;
   border-radius: 3px;
 }
 
 input[type=range]::-ms-track {
-  height: 3vh;
+  height: 20px;
   background: #1ABC9C;
   border: none;
   border-radius: 3px;
 }
 
 input[type=range]::-moz-range-track {
-  height: 3vh;
+  height: 20px;
   background: #1ABC9C;
   border: none;
   border-radius: 3px;
@@ -230,10 +228,15 @@ input[type=range]:focus::-moz-range-track {
   border-radius: 5px;
   border: 1px solid #16a085;
   color: #16a085;
-  transition: 1s;
+  transition: 0.5s;
 }
 
-button.btn-modern.next-btn {}
+.btn-modern.disabled {
+  color: #95A5A6;
+  border-color: #95A5A6;
+  pointer-events: none;
+  transition: color 0.5s, border-color 0.5s;
+}
 
 .btn-modern:hover {
   border: 1px solid #16a085;
