--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,8 @@
 <head>
   <script src="/static/jquery.js"></script>
   <link rel="stylesheet" href="/static/base.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
+  <title>FindALaptop</title>
 </head>
 <body>
 {% block content %}
