--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,41 +1,39 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,400);
-
-html, body{
-    overflow: hidden;
+html, body {}
+body {
+  background-image: url('/static/axiom.png'), -webkit-gradient( linear, left top, right bottom, color-stop(0, #D9B8E6), color-stop(1, #B8E6DD));
+  background-image: url('/static/axiom.png'), -o-linear-gradient(right bottom, #D9B8E6 0%, #B8E6DD 100%);
+  background-image: url('/static/axiom.png'), -moz-linear-gradient(right bottom, #D9B8E6 0%, #B8E6DD 100%);
+  background-image: url('/static/axiom.png'), -webkit-linear-gradient(right bottom, #D9B8E6 0%, #B8E6DD 100%);
+  background-image: url('/static/axiom.png'), -ms-linear-gradient(right bottom, #D9B8E6 0%, #B8E6DD 100%);
+  background-image: url('/static/axiom.png'), linear-gradient(to right bottom, #D9B8E6 0%, #B8E6DD 100%);
 }
-
-body{
-}
-
-#wrapper{
+#wrapper {
   position: absolute;
   top: 50vh;
   margin-top: -25vh;
   left: 0;
-  width: 100%;
+  width: 100vw;
+  overflow: hidden;
 }
-
-#selected{
+#selected {
   position: fixed;
 }
-
-#nav{
+#nav {
   width: 100vw;
   /* margin-left: -50vw; */
-  padding-top: 35vmin;
+  padding-top: 30vh;
   text-align: center;
 }
-
-#nav button{
+#nav button {
   margin-left: 1vw;
   margin-right: 1vw;
 }
-
-.options-container{
+.options-container {
   text-align: center;
   display: block;
-  width: 100%;
-  height: 48vh;
+  width: 100vw;
+  /*height: 48vh;*/
   /* overflow: hidden; */
   margin: auto;
   /* padding-left: 50vw; */
@@ -43,34 +41,31 @@ body{
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
-
-.option{
+.option {
   /* margin: 32px; */
   transition: margin-left 0.5s;
   margin-left: 80vw;
   display: none;
   /* margin-bottom: -10%; */
-  height: 25vh;
+  height: 25vmin;
   width: 60vw;
   position: absolute;
   /* width: 24vw; */
   border-radius: 5px;
-  /*background: #3498DB;*/
+  background: rgba(255, 255, 255, 0.6);
+  padding: 2vh 0 0 0;
+  border: 1px solid #16a085;
 }
-
-.option.active{
+.option.active {
   margin-left: 20vw;
 }
-
-.option.left{
+.option.left {
   margin-left: -40vw;
 }
-
-.option:nth-child(1){
+.option:nth-child(1) {
   display: none !important;
 }
-
-.budget-slider-value{
+.budget-slider-value {
   display: block;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -79,57 +74,77 @@ body{
   color: #1ABC9C;
   transition-duration: 0.25s;
 }
-
-.budget-slider{
+.budget-slider {
   width: 120vh;
   max-width: 80vw;
   transition-duration: 0.25s;
 }
-
-.option-slider{
+.option-slider {
   width: 80%;
   margin: 0 auto 1vmax auto;
   transition-duration: 0.25s;
 }
-
-.option-value{
+.option-value {
   margin-bottom: 5px;
 }
-
-#heading{
+#heading {
   font-family: "Roboto", sans-serif;
   font-weight: 100;
   font-size: 8vmin;
   /* margin-bottom:4vh; */
   transition-duration: 0.25s;
 }
-
-input[type=range]{
+.btn-modern {
+  text-decoration: none;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 6vmin;
+  transition-duration: 0.25s;
+  background-color: rgba(255, 255, 255, 0.6);
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  outline: 0px none;
+  padding: 10px 10vmin;
+  border-radius: 5px;
+  border: 1px solid #16a085;
+  color: #16a085;
+  transition: 0.5s;
+}
+.btn-modern.disabled {
+  color: #95A5A6;
+  border-color: #95A5A6;
+  pointer-events: none;
+  transition: color 0.5s, border-color 0.5s;
+}
+.btn-modern:hover {
+  border: 1px solid #16a085;
+  background-color: #16a085;
+  color: white;
+}
+input[type=range] {
   -webkit-appearance: none;
   background: none;
 }
-
 input[type=range]::-webkit-slider-runnable-track {
   height: 20px;
   background: #1ABC9C;
   border: none;
   border-radius: 3px;
 }
-
 input[type=range]::-ms-track {
   height: 20px;
   background: #1ABC9C;
   border: none;
   border-radius: 3px;
 }
-
 input[type=range]::-moz-range-track {
   height: 20px;
   background: #1ABC9C;
   border: none;
   border-radius: 3px;
 }
-
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: none;
@@ -140,7 +155,6 @@ input[type=range]::-webkit-slider-thumb {
   position: relative;
   cursor: pointer;
 }
-
 input[type=range]::-ms-thumb {
   -webkit-appearance: none;
   border: none;
@@ -151,7 +165,6 @@ input[type=range]::-ms-thumb {
   position: relative;
   cursor: pointer;
 }
-
 input[type=range]::-moz-range-thumb {
   -webkit-appearance: none;
   border: none;
@@ -162,7 +175,6 @@ input[type=range]::-moz-range-thumb {
   position: relative;
   cursor: pointer;
 }
-
 input[type=range]:focus {
   outline: none;
   &::-webkit-slider-thumb:after {
@@ -199,47 +211,12 @@ input[type=range]:focus {
     border: 2px solid #555;
   }
 }
-
 input[type=range]:focus::-webkit-slider-runnable-track {
   background: #1ABC9C;
 }
-
 input[type=range]:focus::-ms-track {
   background: #1ABC9C;
 }
-
 input[type=range]:focus::-moz-range-track {
   background: #1ABC9C;
-}
-
-.btn-modern {
-  text-decoration: none;
-  cursor: pointer;
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
-  font-size: 6vmin;
-  transition-duration: 0.25s;
-  background-color: rgba(255, 255, 255, 0.4);
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  outline: 0px none;
-  padding: 10px 10vmin;
-  border-radius: 5px;
-  border: 1px solid #16a085;
-  color: #16a085;
-  transition: 0.5s;
-}
-
-.btn-modern.disabled {
-  color: #95A5A6;
-  border-color: #95A5A6;
-  pointer-events: none;
-  transition: color 0.5s, border-color 0.5s;
-}
-
-.btn-modern:hover {
-  border: 1px solid #16a085;
-  background-color: #16a085;
-  color: white;
 }
