--- a/app/templates/budget.html
+++ b/app/templates/budget.html
@@ -1,23 +1,23 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div id="wrapper">
-<div class="options-container">
-<div id="heading">Hi,<br>
-start by selecting your budget:</div><br>
-<form action="{{ url_for('budget') }}" method="POST">
-  <input type="range" name="budget" min="200" max="2000" value="1000" step="50" class="budget-slider">
-  <span class="budget-slider-value"></span>
-  <input type="submit" value="Confirm" class="btn-modern">
-</form>
-  <script>
-    var range = $('.budget-slider'),
-    value = $('.budget-slider-value');
-    value.html(range.attr('value')+"€");
+  <div class="options-container">
+    <div id="heading">Hi,
+      <br> start by selecting your budget:</div>
+    <br>
+    <form action="{{ url_for('budget') }}" method="POST">
+      <input type="range" name="budget" min="200" max="2000" value="1000" step="50" class="budget-slider">
+      <span class="budget-slider-value"></span>
+      <input type="submit" value="Confirm" class="btn-modern">
+    </form>
+    <script>
+      var range = $('.budget-slider'),
+        value = $('.budget-slider-value');
+      value.html(range.attr('value') + "€");
 
-    range.on('input', function(){
-    value.html(this.value+"€");
-    });
-  </script>
-</div>
+      range.on('input', function() {
+        value.html(this.value + "€");
+      });
+    </script>
+  </div>
 </div>
 {% endblock %}
