--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,15 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <script>
-function followLink(pageUrl)
-{
+  function followLink(pageUrl) {
     jQuery.ajax({
-        url: pageUrl,
-        type: "GET",
-        dataType: 'html',
-        success: function(response){
-            document.getElementsByTagName('html')[0].innerHTML = response
-        }
+      url: pageUrl,
+      type: "GET",
+      dataType: 'html',
+      success: function(response) {
+        document.getElementsByTagName('html')[0].innerHTML = response
+      }
     });
-}
-followLink("{{ page }}")
+  }
+  followLink("{{ page }}")
 </script>
 {% endblock %}
