--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,17 +1,52 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:100,400);
 html, body {}
 body {
-  background-image: url('/static/axiom.png'), -webkit-gradient( linear, left top, right bottom, color-stop(0, #D9B8E6), color-stop(1, #B8E6DD));
-  background-image: url('/static/axiom.png'), -o-linear-gradient(right bottom, #D9B8E6 0%, #B8E6DD 100%);
-  background-image: url('/static/axiom.png'), -moz-linear-gradient(right bottom, #D9B8E6 0%, #B8E6DD 100%);
-  background-image: url('/static/axiom.png'), -webkit-linear-gradient(right bottom, #D9B8E6 0%, #B8E6DD 100%);
-  background-image: url('/static/axiom.png'), -ms-linear-gradient(right bottom, #D9B8E6 0%, #B8E6DD 100%);
-  background-image: url('/static/axiom.png'), linear-gradient(to right bottom, #D9B8E6 0%, #B8E6DD 100%);
+  background-image: url('/static/axiom.png'), -webkit-gradient( linear, left top, left bottom, color-stop(0, rgba(179, 255, 171, 0.5)), color-stop(1, rgba(18, 255, 247, 0.5)));
+  background-image: url('/static/axiom.png'), -o-linear-gradient(bottom, rgba(179, 255, 171, 0.5) 0%, rgba(18, 255, 247, 0.5) 100%);
+  background-image: url('/static/axiom.png'), -moz-linear-gradient(bottom, rgba(179, 255, 171, 0.5) 0%, rgba(18, 255, 247, 0.5) 100%);
+  background-image: url('/static/axiom.png'), -webkit-linear-gradient(bottom, rgba(179, 255, 171, 0.5) 0%, rgba(18, 255, 247, 0.5) 100%);
+  background-image: url('/static/axiom.png'), -ms-linear-gradient(bottom, rgba(179, 255, 171, 0.5) 0%, rgba(18, 255, 247, 0.5) 100%);
+  background-image: url('/static/axiom.png'), linear-gradient(to bottom, rgba(179, 255, 171, 0.5) 0%, rgba(18, 255, 247, 0.5) 100%);
+  height: 100%;
+  margin: 0;
 }
+#header {
+  background-color: rgba(44, 62, 80, 0.8);
+  top: 0;
+  color: #bdc3c7;
+  width: 100%;
+  height: 20px;
+  font-family: "Roboto", sans-serif;
+  padding: 1vh;
+  font-size: 20px;
+  line-height: 1;
+  transition: all 0.25s;
+}
+/*#header.expanded{
+  height: 70px;
+}
+#expander{
+  display: none;
+}
+#expander + label{
+  background-image: url('/static/plus.png');
+  background-size: contain;
+  width: 30px;
+  height: 30px;
+  margin-right: 30px;
+  float: right;
+  cursor: pointer;
+  transition: all 0.25s;
+}
+#expander:checked + label{
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}*/
 #wrapper {
   position: absolute;
   top: 50vh;
-  margin-top: -25vh;
+  margin-top: -35vh;
   left: 0;
   width: 100vw;
   overflow: hidden;
@@ -122,6 +157,73 @@ body {
   border: 1px solid #16a085;
   background-color: #16a085;
   color: white;
+}
+input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+input:focus:-moz-placeholder {
+  color: transparent;
+}
+
+/* FF 4-18 */
+
+input:focus::-moz-placeholder {
+  color: transparent;
+}
+
+/* FF 19+ */
+
+input:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+/* IE 10+ */
+
+textarea:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+textarea:focus:-moz-placeholder {
+  color: transparent;
+}
+
+/* FF 4-18 */
+
+textarea:focus::-moz-placeholder {
+  color: transparent;
+}
+
+/* FF 19+ */
+
+textarea:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+/* IE 10+ */
+
+
+/*body{
+  text-align: center;
+}*/
+
+input[type=text], input[type=password], textarea {
+  -moz-appearance: none;
+  outline: 0px none;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 3px;
+  padding: 10px 15px;
+  margin: 0px auto 10px;
+  color: #FFF;
+  transition: all 0.25s;
+  font-weight: 300;
+}
+textarea {
+  resize: none;
+}
+input[type=text]:focus, input[type=password]:focus, textarea:focus {
+  background-color: #FFF;
+  color: #16a085;
+  border-color: white !important;
 }
 input[type=range] {
   -webkit-appearance: none;
