--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,23 @@
 <html>
+
 <head>
   <script src="/static/jquery.js"></script>
-  <link rel="stylesheet" href="/static/base.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
+  <link rel="stylesheet" href="/static/base.css"> {% for css in extra_css %}
+  <link rel="stylesheet" href="/static/{{ css }}.css"> {% endfor %}
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+  <!--320-->
   <title>FindALaptop</title>
 </head>
+
 <body>
-{% block content %}
-{% endblock %}
+  <div id='header'>
+    <span id="title">FindALaptop</span>
+  </div>
+  {% block content %} {% endblock %}
+  <script>
+    $('#expander').prop('checked', false)
+    $('#expander').change(function(){
+      $('#header').toggleClass('expanded')
+    });
+  </script>
 </body>
