Committing the current state before branching to bootstrap implementation

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
       Please log in.
     </div>
     <form action="" method='POST'>
-      {{ form.hidden_tag() }} {{ form.user(placeholder='Username') }} {{ form.passwd(placeholder='Password') }}
+      {{ form.hidden_tag() }} {{ form.user(placeholder='Username') }} {{ form.password(placeholder='Password') }}
       <input type='submit' class='btn-modern' value='Login'>
     </form>
   </div>
