--- a/app/static/base.css
+++ b/app/static/base.css
@@ -11,9 +11,9 @@ body {
   margin: 0;
 }
 #header {
-  background-color: rgba(44, 62, 80, 0.8);
+  background-color: rgba(26, 188, 156, 0.5);
   top: 0;
-  color: #bdc3c7;
+  color: #2E4856;
   width: 100%;
   height: 20px;
   font-family: "Roboto", sans-serif;
@@ -63,6 +63,9 @@ body {
 #nav button {
   margin-left: 1vw;
   margin-right: 1vw;
+}
+.btn-container{
+  padding: 40px;
 }
 .options-container {
   text-align: center;
