--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,11 @@
 <html>
 
 <head>
-  <script src="/static/jquery.js"></script>
-  <link rel="stylesheet" href="/static/base.css"> {% for css in extra_css %}
-  <link rel="stylesheet" href="/static/{{ css }}.css"> {% endfor %}
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+  <link href="/static/css/flat-ui.min.css" rel="stylesheet" media="screen">
+  <link href="/static/css/flat-ui-responsive.min.css" rel="stylesheet">
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="/static/js/flat-ui.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--320-->
   <title>FindALaptop</title>
 </head>
@@ -16,7 +17,7 @@
   {% block content %} {% endblock %}
   <script>
     $('#expander').prop('checked', false)
-    $('#expander').change(function(){
+    $('#expander').change(function() {
       $('#header').toggleClass('expanded')
     });
   </script>
