--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,24 +1,38 @@
 <html>
 
 <head>
-  <link href="/static/css/flat-ui.min.css" rel="stylesheet" media="screen">
-  <link href="/static/css/flat-ui-responsive.min.css" rel="stylesheet">
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script src="/static/js/flat-ui.min.js"></script>
+  <meta charset="utf-8">
+  <title>LaptopMeter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--320-->
-  <title>FindALaptop</title>
+
+  <!-- Loading Bootstrap -->
+  <link href="/static/css/vendor/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Loading Flat UI -->
+  <link href="/static/css/flat-ui.min.css" rel="stylesheet">
+
+  <link rel="shortcut icon" href="/static/img/favicon.ico">
+
+  <link href="static/base.css" rel="stylesheet">
+  {% for css in extra_css %}
+    <link href="static/{{ css }}.css" rel="stylesheet">
+  {% endfor %}
+
+  <!-- jQuery (necessary for Flat UI's JavaScript plugins) -->
+  <script src="/static/js/vendor/jquery.min.js"></script>
+
+  <script src="/static/jquery-ui.min.js"></script>
+
+  <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+  <!--[if lt IE 9]>
+      <script src="js/vendor/html5shiv.js"></script>
+      <script src="js/vendor/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
-  <div id='header'>
-    <span id="title">FindALaptop</span>
-  </div>
   {% block content %} {% endblock %}
-  <script>
-    $('#expander').prop('checked', false)
-    $('#expander').change(function() {
-      $('#header').toggleClass('expanded')
-    });
-  </script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="/static/js/vendor/video.js"></script>
+  <script src="/static/js/flat-ui.min.js"></script>
 </body>
