--- a/app/static/login.css
+++ b/app/static/login.css
@@ -1,10 +1,25 @@
-body{
-  margin-top: 50px;
-  margin-bottom: 40px;
-  background-color: #1abc9c;
+html{
+  background: url('/static/bg.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-
-#form-login{
+body {
+  background-color: rgba(26, 188, 156, 0.8);
+  height: 100%;
+}
+.container{
+  position: absolute;
+  width: 100%;
+  margin: -156px auto auto -50%;
+  top: 50%;
+  left: 50%;
+}
+h3{
+  margin-top: 10px;
+}
+#form-login {
   max-width: 500px;
   padding: 15px;
   margin: 0px auto;
