--- a/app/static/base.css
+++ b/app/static/base.css
@@ -5,6 +5,11 @@ html{
   background-color: rgba(26, 188, 156, 0.8);
 }
 
+.budget-slider{
+  margin-top: 4vmin;
+  margin-bottom: 4vmin;
+}
+
 input[type=range] {
   -webkit-appearance: none;
   background: none;
@@ -32,6 +37,7 @@ input[type=range]::-webkit-slider-thumb {
   border: none;
   height: 18px;
   width: 18px;
+  margin-top: -3px;
   border-radius: 9px;
   background-color: #34495E;
   position: relative;
