--- a/app/static/login.css
+++ b/app/static/login.css
@@ -6,7 +6,7 @@ html{
   background-size: cover;
 }
 body {
-  background-color: rgba(26, 188, 156, 0.8);
+  background-color: rgba(26, 188, 156, 0.6);
   height: 100%;
 }
 .container{
@@ -23,4 +23,7 @@ h3{
   max-width: 500px;
   padding: 15px;
   margin: 0px auto;
+}
+.login-form{
+  background-color: rgba(237, 239, 241, 0.6);
 }
