--- a/app/static/budget.css
+++ b/app/static/budget.css
@@ -1,5 +1,5 @@
 html {
-  background: url('/static/lake.jpg') no-repeat center center fixed;
+  background: url('/static/mountains.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -9,6 +9,7 @@ body {
   padding-top: 70px;
   padding-bottom: 40px;
   text-align: center;
+  height: 100%;
   background-color: rgba(52, 152, 219, 0.6);
 }
 .container {
