--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,8 +14,16 @@
         <label class="login-field-icon fui-lock" for="login-pass"></label>
       </div>
 
+      <div class="form-group">
+        <label class="checkbox" for="remember_me">
+          {{ form.remember_me(**{'data-toggle':'checkbox'}) }}
+        </label><span class="checkbox-label">Remember me?</span>
+      </div>
       <a onclick="$('#form-login').submit()" class="btn btn-primary btn-lg btn-block" href="#">Log in</a>
     </div>
   </form>
 </div>
+<script>
+$(':checkbox').radiocheck();
+</script>
 {% endblock %}
