--- a/app/templates/laptops.html
+++ b/app/templates/laptops.html
@@ -1,38 +1,10 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'admin.html' %} {% block content %}
 
-<!--BEGIN NAVBAR-->
-<div class="navbar navbar-inverse navbar-static-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-      </button>
-      <a class="navbar-brand" href="#">LaptopMeter</a>
-    </div>
-    <div class="navbar-collapse collapse" id="navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Laptops</a></li>
-        <li><a href="{{ url_for('stats') }}">Statistics</a></li>
-        <li><a href="#contact">Users</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }} <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Options</a></li>
-            <li><a href="{{ url_for('logout') }}">Log out</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <!--/.nav-collapse -->
-  </div>
-</div>
-<!--END NAVBAR-->
+<script>$('#nav-laptops').addClass('active')</script>
 
 <div class="container">
   <h2>
-    Hello, {{ user.username }}
+    Laptops
   </h2>
   <div class="table-responsive">
     <table class="table table-striped">
