--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -1,35 +1,6 @@
-{% extends 'base.html' %} {% block content %}
-
-<!--BEGIN NAVBAR-->
-<div class="navbar navbar-inverse navbar-static-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-      </button>
-      <a class="navbar-brand" href="#">LaptopMeter</a>
-    </div>
-    <div class="navbar-collapse collapse" id="navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="{{ url_for('laptops') }}">Laptops</a></li>
-        <li class="active"><a href="#">Statistics</a></li>
-        <li><a href="#contact">Users</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }} <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Options</a></li>
-            <li><a href="{{ url_for('logout') }}">Log out</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <!--/.nav-collapse -->
-  </div>
-</div>
-<!--END NAVBAR-->
+{% extends 'admin.html' %} {% block content %}
+<script>$('#nav-stats').addClass('active')</script>
 <div class="container">
-  <h1>Stats</h1>
+  <h2>Statistics</h2>
 </div>
 {% endblock %}
