--- a/app/templates/user_edit.html
+++ b/app/templates/user_edit.html
@@ -3,7 +3,7 @@
   $('#nav-users').addClass('active')
 </script>
 <div class="container">
-  {% include 'user_add_form.html' %}
+  {% include 'user_edit_form.html' %}
 </div>
 <script>
 {% for error in form.password.errors %}
