--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -13,9 +13,9 @@
 
   <link rel="shortcut icon" href="/static/img/favicon.ico">
 
-  <link href="static/base.css" rel="stylesheet">
+  <link href="/static/base.css" rel="stylesheet">
   {% for css in extra_css %}
-    <link href="static/{{ css }}.css" rel="stylesheet">
+    <link href="/static/{{ css }}.css" rel="stylesheet">
   {% endfor %}
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
@@ -71,4 +71,5 @@
   <!--END NAVBAR-->
 
   {% block content %} {% endblock %}
+  <script>$("select").select2({dropdownCssClass: 'dropdown-inverse'});</script>
 </body>
