--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,7 +9,7 @@
       {% include 'password_field.html' %}
 
       <div class="form-group">
-        <label class="checkbox" for="remember_me">
+        <label class="checkbox" for="login-form-remember_me">
           {{ form.remember_me(**{'data-toggle':'checkbox'}) }}
         </label><span class="checkbox-label">Remember me?</span>
       </div>
