--- a/app/templates/user_edit_form.html
+++ b/app/templates/user_edit_form.html
@@ -1,14 +1,20 @@
 <form id='form-add-user' action="" method='POST'>
   {{ form.hidden_tag() }}
   <div class="login-form">
-    <h3>Add user</h3>
+    <h3>Modify user</h3>
     {% include 'user_field.html' %}
 
     {% include 'password_field.html' %}
 
     {% include 'permissions_field.html' %}
 
-    <a onclick="$('#form-add-user').submit()" class="btn btn-primary btn-lg btn-block" href="#">Confirm</a>
+    <div class="form-group">
+      <label class="checkbox" for="edit-form-remove">
+        {{ form.remove(**{'data-toggle':'checkbox'}) }}
+      </label><span class="checkbox-label">Remove</span>
+    </div>
+
+    <a id='submit-btn' onclick="$('#form-add-user').submit()" class="btn btn-primary btn-lg btn-block" href="#">Confirm</a>
   </div>
 </form>
-<script>$('input').attr('autocomplete', 'off')</script>
+<script>$('#login-pass').attr('placeholder', 'Password (Leave empty to keep old)')</script>
