--- a/app/templates/laptops.html
+++ b/app/templates/laptops.html
@@ -12,7 +12,6 @@
       <thead>
         <tr>
           <th>#</th>
-          <th>Brand</th>
           <th>Model</th>
           <th>Screen size</th>
           <th>Price</th>
@@ -22,8 +21,7 @@
         {% for laptop in laptops %}
         <tr>
           <td>{{ laptop.id }}</td>
-          <td>{{ laptop.brand }}</td>
-          <td>{{ laptop.model }}</td>
+          <td><a href='laptops/{{ laptop.id }}/edit'>{{ laptop.brand }} {{ laptop.model }}</a></td>
           <td>{{ laptop.size }}</td>
           <td>{{ laptop.price }}</td>
         <td>
